--- a/Web-Fundamentals/CSS/Week-4/style.css
+++ b/Web-Fundamentals/CSS/Week-4/style.css
@@ -98,8 +98,8 @@ article>table {
     width: 90%;
     height: 35%;
     border-radius: 10%;
-    background: white;
-    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0);
+    background: rgb(255, 255, 255);
+    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.918);
 }
 
 p {
