--- a/Web-Fundamentals/CSS/Week-4/style.css
+++ b/Web-Fundamentals/CSS/Week-4/style.css
@@ -54,7 +54,7 @@ article {
     background-repeat: no-repeat;
     background-size: 100%;
     background-color: white;
-    box-shadow: 8px 8px 8px rgb(0, 0, 0);
+    box-shadow:20px 20px 50px 15px grey; 
 }
 
 article>table {
