--- a/Web-Fundamentals/CSS/Week-5/CSS Facebook/style.css
+++ b/Web-Fundamentals/CSS/Week-5/CSS Facebook/style.css
@@ -1,188 +1,144 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-shadow: border-box;
-}
-
-body {
-    background-color: rgb(236, 235, 235);
-    color: rgb(5, 5, 5);
-}
-
-.container {
-    width: 100vw;
-    height: 70vh;
-    position: relative;
-    margin: o auto;
-}
-
-.section1 {
+#container {
     display: flex;
-    justify-content: space-around;
+    background-color: whitesmoke;
+    width: 214vh;
+    height: 75vh;
+    justify-content: center;
+    border-style: hidden;
+}
+
+.left-side {
+    display: flex;
+    width: 120vh;
+    height: 75vh;
+    border-style: hidden;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    max-width: 1000px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    flex-direction: column;
 }
 
-.section2 {
-    flex: 0 0 40%;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-    border-radius: 12px;
-    
+.header>#logo {
+    font-size: 4rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: blue;
+    margin-bottom: 0vh;
+    margin-left: -30vh;
 }
 
-.logo {
-    flex: 0 0 50%;
+.left-side>p {
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    line-height: normal;
+    width: 75vh;
+    height: 25vh;
     text-align: left;
+    padding-top: 0vh;
 }
 
-.face {
-    font-size: 42px;
-    font-weight: 700;
-    color: rgb(27, 27, 250);
-}
-
-.logo h2 {
-    font: 26px;
-    font-weight: 400;
-    margin-right: 30px;
-    line-height: 32px;
-}
-
-.section2 form {
-    background-color: rgb(255, 255, 255);
-    border-radius: 7px;
-    margin-bottom: 30px;
-    max-width: 450px;
+.right-side {
     display: flex;
+    flex-direction: column;
+    border-style: hidden;
+    width: 80vh;
+    height: 75vh;
+    justify-content: center;
     align-items: center;
+}
+
+#forum {
+    border-style: hidden;
+    width: 45vh;
+    height: 50vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#email,
+#passwort,
+#anmelden,
+p {
+    width: 38vh;
+    height: 10vh;
+    border-radius: 1vh;
+    margin: 1px 2px 1px 4px;
+}
+
+#forum>p {
+    display: flex;
+    align-items: flex-end;
     justify-content: center;
 }
 
-.section2 .form input,
-.section2 .form .konto {
-    width: 300px;
-    margin: 5px 0;
-    height: 45px;
-    font-size: 16px;
+#Konto {
+    background-color: rgb(50, 205, 50);
+    color: white;
+    border-radius: 1vh;
+    margin-bottom: 20px;
+    width: 25vh;
+    height: 15vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.section2 .form input {
-    border: 1px solid rgb(219, 218, 218);
-    color: rgb(48, 48, 114);
-    padding: 0 8px;
-    outline: none;
-    width: 75%;
-    border-radius: 8px;
+#anmelden {
+    background-color: blue;
+    color: aliceblue;
+    height: 15vh;
+
 }
 
-.form input:focus {
-    border-color: rgb(27, 27, 250);
-    box-shadow: 0 0 0 2px rgb(234, 234, 255);
+.box-footer>p {
+    font-size: 15px;
+    border-style: hidden;
+    text-align: center;
 }
 
-.section2 .form .anmel {
-    background-color: rgb(27, 27, 250);
-    border: none;
-    border-radius: 6px;
-    font-size: 20px;
-    padding: 0 16px;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    padding: 7px 0;
-    margin: 0 40px;
-    max-width: 320px;
+#email , #passwort {
+    border-color: rgb(0, 132, 255);
+    text-decoration-color: gray;
 }
 
-.section2 .form a {
-    display: block;
-    color: rgb(27, 27, 250);
-    font-size: 14px;
-    padding: 10px solid rgb(226, 226, 226);
+nav {
+    background-color: white;
+    width: 200vh;
+    height: max-content;
 }
 
-a:hover {
-    text-decoration: underline;
+.lang {
+    display: flex;
+    list-style: none;
+    justify-content: flex-start;
+    justify-content: space-between;
+    border-style: hidden;
 }
 
-.section2 .form .konto {
-    background-color: rgb(28, 167, 28);
-    border: none;
-    border-radius: 6px;
-    font-size: 17px;
-    line-height: 48px;
-    color: rgb(255, 255, 255);
-    font-weight: 700;
-    position: relative;
-    margin-top: 40px;
-    max-width: 200px;
-    margin-left: 25%;
-}
-
-.section2 p {
-    font-size: 14px;
-}
-
-.section2 p a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-weight: 600;
+.lang>li {
+    border-style: hidden;
+    padding-right: 2vh;
 }
 
 .link {
-    position: absolute;
-    margin-bottom: -50px;
-}
-
-footer {
-    height: 30vh;
-    background-color: rgb(255, 255, 255);
-}
-
-.footer-conteiner {
-    position: relative;
-    max-width: 1000px;
-    margin: 0 auto;
-}
-
-footer ol {
     display: flex;
+    list-style: none;
+    justify-content: flex-start;
+    border-style: hidden;
     flex-wrap: wrap;
-    list-style-type: none;
-    padding: 10px 0;
+    height: 10vh;
 }
 
-footer ol:first-child {
-    border-bottom: 1px solid rgb(221, 223, 226);
+.link>li {
+    padding-right: 2vh;
+    border-style: hidden;
 }
 
-ol:first-child li:last-child button {
-    background-color: rgb(245, 246, 247);
-    border: 1px solid rgb(204, 208, 213);
-    outline: none;
-    color: rgb(75, 79, 86);
-    padding: 0 8px;
-    font-weight: 700;
-    font-size: 16px;
+footer>p{
+    margin-left: 7vh;
 }
 
-footer ol li {
-    padding-right: 15px;
-    font-size: 13px;
-    color: rgb(56, 88, 152);
-}
-
-footer ol li a {
-    text-decoration: none;
-    color: rgb(56, 88, 152);
-}
-
-footer  small {
-    font-size: 15px;
+a{
+    color: rgb(67, 64, 250);
 }
